# matasano

./: AUTHORS  Makefile.am  README  configure.ac  main.c
include/: base64.h  hex.h  score.h  xor.h
set1/: challenge1.c  challenge2.c  challenge3.c  challenge4.c  challenge5.c  challenge6.c  challenge7.c  challenge8.c  set1.c
set2/: challenge10.c  challenge11.c  challenge9.c  set2.c
util/: base64.c  hex.c  score.c  xor.c
